--- a/docker/provisioning/datasources/datasource.yml
+++ b/docker/provisioning/datasources/datasource.yml
@@ -7,6 +7,10 @@ datasources:
     uid: opensearch
     url: http://opensearch:9200
     editable: true
+    jsonData:
+      database: "*"
+      timeField: time
+      version: '2.8.0'
 
   - name: Jaeger
     type: jaeger
